test_files/netlist_validation/valid/valid_06.net
V1 IN 0 AC 1
C1 IN MID 10n
R1 MID 0 2k
.ac dec 10 1 1Meg
.backanno
.end
