test_files/netlist_validation/invalid/invalid_10.net
V1 N001 0 5
R1 N001 N002 1k
C1 N003 0 10n
.tran 1m
.backanno
.end
